Default Surefire argLine to preview flag